chore(convention): Make project buildable from IDEA