@@ -1,67 +1,58 @@
-import org.gradle.plugins.ide.idea.model.FilePath
-import org.gradle.plugins.ide.idea.model.Module
-import org.gradle.plugins.ide.idea.model.SingleEntryModuleLibrary
-import org.jetbrains.gradle.ext.IdeaCompilerConfiguration
-import org.jetbrains.gradle.ext.ModuleSettings
+import org.gradle.plugins.ide.idea.model.IdeaLanguageLevel
 import java.nio.file.Files
 import java.nio.file.Paths
 
 plugins {
-    application
+    idea
     scala
-    org.jetbrains.gradle.plugin.`idea-ext`
+    application
 }
 
 repositories.jcenter()
 
-idea {
-    targetVersion = JavaVersion.current().toString()
-    module {
-        this as ExtensionAware
-        configure<ModuleSettings> {
-            this as ExtensionAware
-            configure<IdeaCompilerConfiguration> {
-                additionalVmOptions = Files.readString(Paths.get("javacArgs"))
-                //addNotNullAssertions = true TODO
-                parallelCompilation = true
-                useReleaseOption = true
-                javac.preferTargetJDKCompiler = true
-            }
+dependencies {
+    arrayOf(
+        "org.scala-lang:scala-library:2.13.3",
+        "org.scala-lang:scala-compiler:2.13.3",
+        "io.gatling.highcharts:gatling-charts-highcharts:3.4.0-M1"
+    ).forEach(::implementation)
+}
 
+scala {
+    zincVersion.set("1.3.5")
+}
+
+tasks {
+    withType<ScalaCompile>().configureEach {
+        /*
+         * For IDEA based build (Ant) this `targetCompatibility` shas to be set to the desired value,
+         * otherwise will be inherited from project regardles `release` set
+         */
+        targetCompatibility = JavaVersion.current().coerceAtMost(JavaVersion.VERSION_12).toString()
+        options.apply {
+            release.set(JavaVersion.current().coerceAtMost(JavaVersion.VERSION_12).majorVersion.toInt())
+            isFork = true
+            forkOptions.jvmArgs = listOf("--enable-preview", "--illegal-access=warn")
+            Files.lines(Paths.get("$rootDir", "buildSrc", "javacArgs")).forEach { compilerArgs.add(it) } //Ant (e.i. Ittellij driven build) can't compile ambiguous function reference
+        }
+        scalaCompileOptions.apply {
+            isForce = true
+            forkOptions.apply {
+                jvmArgs = Files.readAllLines(Paths.get("$projectDir", "jvmArgs"))
+            }
         }
     }
-    module {
-        inheritOutputDirs = false
-        iml {
-            whenMerged { m: Module ->
-                m.isInheritOutputDirs = false
-                configurations
-                    .implementation
-                    .map { it.single { it.name.startsWith("scala-library") } }
-                    .map { FilePath(it, it.toURI().toURL().toExternalForm(), it.canonicalPath, it.relativeTo(project.buildFile).path) }
-                    .map { SingleEntryModuleLibrary(it, "COMPILE") }
-                    .map { m.dependencies.add(it) }
-            }
-        }
+
+    (run) {
+        file("$buildDir/reports/gatling").mkdirs()
+        args = listOf(
+            "-s", "com.example.marvel.gatling.AddressGatlingTest",
+            "-rf", "$buildDir/reports/gatling"
+        )
     }
 }
 
 application {
     mainClassName = "io.gatling.app.Gatling"
-    applicationDefaultJvmArgs = Files.readAllLines(Paths.get("$projectDir/jvmArgs"))
-}
-
-(tasks.run) {
-    file("$buildDir/reports/gatling").mkdirs()
-    args = listOf(
-        "-s", "com.example.marvel.gatling.AddressGatlingTest",
-        "-rf", "$buildDir/reports/gatling"
-    )
-}
-
-dependencies {
-    arrayOf(
-        "org.scala-lang:scala-library:2.13.3",
-        "io.gatling.highcharts:gatling-charts-highcharts:3.4.0-M1"
-    ).forEach(::implementation)
+    applicationDefaultJvmArgs = Files.readAllLines(Paths.get("$projectDir", "jvmArgs"))
 }
